# fullStackStudy

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py  server.py  websocket_handlers.py
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx
frontend/src/utils/: websocket.js
